complete draft spec
