# docs/IUF_swagger.yaml
@@ -28,10 +28,16 @@ definitions:
       activity_states:
         description: History of states
         items:
-          $ref: '#/definitions/Activity.State'
+          description: State of Activity
+          enum:
+          - paused
+          - in_progress
+          - debug
+          - completed
+          type: string
         type: array
       input_parameters:
-        $ref: '#/definitions/Activity.InputParameters'
+        $ref: '#/definitions/InputParameters'
         description: Input parameters by admin
       name:
         description: Name of activity
@@ -54,7 +60,7 @@ definitions:
   Activity.CreateActivityRequest:
     properties:
       input_parameters:
-        $ref: '#/definitions/Activity.InputParameters'
+        $ref: '#/definitions/InputParameters'
         description: Input parameters by admin
       name:
         description: Name of activity
@@ -63,7 +69,49 @@ definitions:
     - input_parameters
     - name
     type: object
-  Activity.InputParameters:
+  Activity.PatchActivityRequest:
+    properties:
+      input_parameters:
+        $ref: '#/definitions/InputParameters'
+    required:
+    - input_parameters
+    type: object
+  History:
+    properties:
+      comment:
+        description: Comment
+        type: string
+      session_name:
+        description: Name of the session
+        type: string
+      start_time:
+        description: Epoch timestamp
+        type: integer
+      state:
+        description: State of Activity
+        enum:
+        - paused
+        - in_progress
+        - debug
+        - completed
+        type: string
+    type: object
+  History.HistoryActionRequest:
+    properties:
+      comment:
+        description: Comment
+        type: string
+      start_time:
+        description: Epoch timestamp
+        type: integer
+    type: object
+  History.ReplaceHistoryCommentRequest:
+    properties:
+      comment:
+        description: Comment
+        type: string
+    type: object
+  InputParameters:
     properties:
       bootprep_config_managed:
         description: Each item is a path of the bootprep files
@@ -90,32 +138,10 @@ definitions:
         description: The inline contents of the site_parameters.yaml file.
         type: string
       stages:
-        description: Execution of the specified stages
+        description: Stages to execute
         items:
           type: string
         type: array
-    type: object
-  Activity.PatchActivityRequest:
-    properties:
-      input_parameters:
-        $ref: '#/definitions/Activity.InputParameters'
-    required:
-    - input_parameters
-    type: object
-  Activity.State:
-    properties:
-      comment:
-        type: string
-      session_name:
-        type: string
-      start_time:
-        type: string
-      state:
-        type: string
-    required:
-    - session_name
-    - start_time
-    - state
     type: object
   Product:
     properties:
@@ -140,21 +166,36 @@ definitions:
     type: object
   Session:
     properties:
+      current_state:
+        enum:
+        - paused
+        - in_progress
+        - debug
+        - completed
+        type: string
+      input_parameters:
+        $ref: '#/definitions/InputParameters'
       products:
         items:
           $ref: '#/definitions/Product'
         type: array
-      stages:
-        description: |-
-          The stages that need to be executed.
-          This is either explicitly specified by the Admin, or it is computed from the workflow type.
-          An Stage is a group of Operations. Stages represent the overall workflow at a high-level, and executing a stage means executing a bunch of Operations in a predefined manner.  An Admin can specify the stages that must be executed for an install-upgrade workflow. And Product Developers can extend each stage with custom hook scripts that they would like to run before and after the stage's execution.  The high-level stages allow their configuration would revealing too many details to the consumers of IUF.
-          if not specified, we apply all stages
+      stage:
+        type: string
+      workflows:
         items:
-          type: string
+          $ref: '#/definitions/Session.Workflow'
         type: array
     required:
     - products
+    type: object
+  Session.Workflow:
+    properties:
+      id:
+        description: id of argo workflow
+        type: string
+      url:
+        description: url to the argo workflow
+        type: string
     type: object
 info:
   contact: {}
@@ -209,10 +250,61 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/Session'
+            items:
+              $ref: '#/definitions/History'
+            type: array
         "501":
           description: Not Implemented
-      summary: List stages of iuf
+      summary: List history of an iuf activity
+      tags:
+      - History
+  /iuf/v1/activities/{activity_id}/history/{start_time}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: start time of a history item
+        in: path
+        name: start_time
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/History'
+        "501":
+          description: Not Implemented
+      summary: Get a history item of an iuf activity
+      tags:
+      - History
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: start time of a history item
+        in: path
+        name: start_time
+        required: true
+        type: string
+      - description: Modify comment of a history
+        in: body
+        name: activity
+        required: true
+        schema:
+          $ref: '#/definitions/History.ReplaceHistoryCommentRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/History'
+        "501":
+          description: Not Implemented
+      summary: Get a history item of an iuf activity
       tags:
       - History
   /iuf/v1/activities/{activity_name}:
@@ -264,14 +356,144 @@ paths:
       summary: Get an IUF activity
       tags:
       - Activities
-  /iuf/v1/activities/{activity_uid}/sessions:
+  /iuf/v1/activities/{activity_name}/history/abort:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: activity name
+        in: path
+        name: activity_name
+        required: true
+        type: string
+      - description: Action Request
+        in: body
+        name: action_request
+        required: true
+        schema:
+          $ref: '#/definitions/History.HistoryActionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "501":
+          description: Not Implemented
+      summary: Abort a session
+      tags:
+      - History
+  /iuf/v1/activities/{activity_name}/history/blocked:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: activity name
+        in: path
+        name: activity_name
+        required: true
+        type: string
+      - description: Action Request
+        in: body
+        name: action_request
+        required: true
+        schema:
+          $ref: '#/definitions/History.HistoryActionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "501":
+          description: Not Implemented
+      summary: Mark a session blocked
+      tags:
+      - History
+  /iuf/v1/activities/{activity_name}/history/paused:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: activity name
+        in: path
+        name: activity_name
+        required: true
+        type: string
+      - description: Action Request
+        in: body
+        name: action_request
+        required: true
+        schema:
+          $ref: '#/definitions/History.HistoryActionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "501":
+          description: Not Implemented
+      summary: Pause a session
+      tags:
+      - History
+  /iuf/v1/activities/{activity_name}/history/resume:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: activity name
+        in: path
+        name: activity_name
+        required: true
+        type: string
+      - description: Action Request
+        in: body
+        name: action_request
+        required: true
+        schema:
+          $ref: '#/definitions/History.HistoryActionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "501":
+          description: Not Implemented
+      summary: Resume an activity
+      tags:
+      - History
+  /iuf/v1/activities/{activity_name}/history/run:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: activity name
+        in: path
+        name: activity_name
+        required: true
+        type: string
+      - description: Action Request
+        in: body
+        name: action_request
+        required: true
+        schema:
+          $ref: '#/definitions/History.HistoryActionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "501":
+          description: Not Implemented
+      summary: Run a session
+      tags:
+      - History
+  /iuf/v1/activities/{activity_name}/sessions:
     get:
       consumes:
       - application/json
       parameters:
-      - description: activity uid
+      - description: activity name
         in: path
-        name: activity_uid
+        name: activity_name
         required: true
         type: string
       produces:
@@ -288,19 +510,19 @@ paths:
       summary: List sessions of an IUF activity
       tags:
       - Sessions
-  /iuf/v1/activities/{activity_uid}/sessions/{session_uid}:
+  /iuf/v1/activities/{activity_name}/sessions/{session_name}:
     get:
       consumes:
       - application/json
       parameters:
-      - description: activity uid
+      - description: activity name
         in: path
-        name: activity_uid
+        name: activity_name
         required: true
         type: string
-      - description: session uid
+      - description: session name
         in: path
-        name: session_uid
+        name: session_name
         required: true
         type: string
       produces:
@@ -315,20 +537,4 @@ paths:
       summary: Get a session of an IUF activity
       tags:
       - Sessions
-  /iuf/v1/stages:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/Session'
-        "501":
-          description: Not Implemented
-      summary: List stages of iuf
-      tags:
-      - Stages
 swagger: "2.0"
